--- a/style.css
+++ b/style.css
@@ -10,17 +10,40 @@ body {
 
 .container {
   width: 80%;
-  margin: 20px auto;
+  height: 100vh;
+  margin: 0 auto;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container .btn-container button {
+  padding: 2.5px;
+  align-self: flex-start;
 }
 
 .container .form-container {
-  width: 60%;
-  margin: 0 auto;
-  display: flex;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0, 0.6);
+  position: absolute;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: start;
 }
+
+.container .form-container form {
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 100px 20px;
+  background-color: white;
+  box-shadow: 0px 0px 20px black;
+}
+
 
 .container .form-container .form-entry:last-child {
   display: flex;
